Add attributes v3 and necessary classes and properties to categorize attributes and its content based on version (#556)